Remove use of the basis set library for the 4-31G* and 4-31G** basis sets.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407407

--- a/mpqc/src/bin/mpqc/sample/ts.in
+++ b/mpqc/src/bin/mpqc/sample/ts.in
@@ -48,3 +48,64 @@ mpqc: (
     )
   )
 )
+
+basis:(
+ hydrogen: "4-31G*": [
+  (type: [am = s]
+   {exp coef:0} = {
+          18.73113700      0.03349460
+           2.82539440      0.23472690
+           0.64012170      0.81375730
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+           0.16127780      1.00000000
+   })
+ ]
+ carbon: "4-31G*": [
+  (type: [am = s]
+   {exp coef:0} = {
+         486.96693000      0.01772580
+          73.37109400      0.12347870
+          16.41345800      0.43387540
+           4.34498360      0.56150420
+   })
+  (type: [am = p am = s]
+   {exp coef:1 coef:0} = {
+           8.67352530     -0.12138370      0.06354540
+           2.09661930     -0.22733850      0.29826780
+           0.60465130      1.18517390      0.76210320
+   })
+  (type: [am = p am = s]
+   {exp coef:1 coef:0} = {
+           0.18355780      1.00000000      1.00000000
+   })
+  (type: [am = d]
+   {exp coef:0} = {
+           0.80000000      1.00000000
+   })
+ ]
+ nitrogen: "4-31G*": [
+  (type: [am = s]
+   {exp coef:0} = {
+         671.27950000      0.01759825
+         101.20170000      0.12284624
+          22.69997000      0.43378214
+           6.04060900      0.56141822
+   })
+  (type: [am = p am = s]
+   {exp coef:1 coef:0} = {
+          12.39359970     -0.11748930      0.06402034
+           2.92238280     -0.21399402      0.31120256
+           0.83252808      1.17450211      0.75274824
+   })
+  (type: [am = p am = s]
+   {exp coef:1 coef:0} = {
+           0.22596400      1.00000000      1.00000000
+   })
+  (type: [am = d]
+   {exp coef:0} = {
+           0.80000000      1.00000000
+   })
+ ]
+)
