Add QM/MM test cases and some minimal documentation.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407409

--- a/mpqc/src/bin/mpqc/validate/Makefile
+++ b/mpqc/src/bin/mpqc/validate/Makefile
@@ -187,7 +187,8 @@ clks_b88.in    hsosks_blyp.in        uks_b3lyp.in \
 clks_blyp.in   hsosks_lsdax.in       uks_b88.in \
 clks_lsdax.in  hsosks_xa.in          uks_blyp.in \
 clks_xa.in     uks_lsdax.in          uks_xa.in \
-hsoshf.in      osshf.in
+hsoshf.in      osshf.in              qmmm1.in \
+qmmm2.in
 
 ifeq ($(HAVE_MBPTR12),yes)
  METHODSINPUTS += \
