Remove dead code.  Move DistShellPair from sc::exp to sc.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407425

--- a/mpqc/src/lib/chemistry/qc/mbpt/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbpt/Makefile
@@ -39,7 +39,7 @@ TESTPROGS = mbpttest
 
 CXXSRCS = mbpt.cc csgrad.cc csgrade12.cc csgrads2pdm.cc csgmat.cc cscphf.cc \
           hsosv1.cc hsosv1e1.cc hsosv2.cc hsosv2lb.cc util.cc mp2extrap.cc \
-          distsh.cc csgrad34qb.cc
+          csgrad34qb.cc
 
 CSRCS = bzerofast.c
 
