--- a/mpqc/src/bin/mpqc/validate/ref/mbpt_mp2mem.in
+++ b/mpqc/src/bin/mpqc/validate/ref/mbpt_mp2mem.in
@@ -20,7 +20,7 @@ mpqc: (
   savestate = no
   restart = no
   do_energy = yes
-  do_gradient = no
+  do_gradient = yes
   % method for computing the molecule's energy
   mole<MBPT2>: (
     molecule = $:molecule
