--- a/mpqc/src/bin/mpqc/validate/ref/mbpt_mp2mem_dyn.in
+++ b/mpqc/src/bin/mpqc/validate/ref/mbpt_mp2mem_dyn.in
@@ -30,6 +30,7 @@ mpqc: (
     nfzv = 2
     method = mp
     algorithm = memgrp
+    dynamic = 1
     reference<CLHF>: (
       molecule = $:molecule
       basis = $:basis
