mods for ccafe testing
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407491

--- a/mpqc/lib/cca/components.cca.in
+++ b/mpqc/lib/cca/components.cca.in
@@ -11,6 +11,7 @@
     <class name="MPQC.Chemistry_QC_Model" desc="ior/impl" />
     <class name="MPQC.ChemistryOpt_CoordinateModel" desc="ior/impl" />
     <class name="MPQC.IntegralEvaluatorFactory" desc="ior/impl" />
+    <class name="MPQC.SimpleDriver" desc="ior/impl" />
   </library>
 </scl>
 <componentDeployment name="MPQC.Chemistry_MoleculeViewer"
@@ -35,6 +36,13 @@
 <componentDeployment
  name="MPQC.IntegralEvaluatorFactory"
  paletteClassAlias="MPQC.IntegralEvaluatorFactory" >
+   <environment>
+     <ccaSpec binding="babel" /> <library loading="dynamic" />
+   </environment>
+</componentDeployment>
+<componentDeployment
+ name="MPQC.SimpleDriver"
+ paletteClassAlias="MPQC.SimpleDriver" >
    <environment>
      <ccaSpec binding="babel" /> <library loading="dynamic" />
    </environment>
