--- a/mpqc/src/bin/mpqc/mpqcrun.in
+++ b/mpqc/src/bin/mpqc/mpqcrun.in
@@ -50,7 +50,7 @@ if ("$always_use_mpi" eq "yes") {
 $integral = "none";
 
 # The mpi launch command
-$launch = '@LAUNCH@';
+$launch = '@CCALAUNCH@';
 
 # The number of tasks
 $ntask = 1;
