mods/additions for ccafe testing, jobs run, but checkrun not working yet
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407494

--- a/mpqc/src/bin/mpqc/Makefile
+++ b/mpqc/src/bin/mpqc/Makefile
@@ -92,9 +92,10 @@ install:: mpqc
 	$(INSTALL) $(INSTALLDIROPT) $(installroot)$(bindir)
 	$(LTINST) $(INSTALL) $(INSTALLBINOPT) $< $(installroot)$(bindir)
 	$(INSTALL) $(INSTALLSCRIPTOPT) mpqcrun $(installroot)$(bindir)/mpqcrun
+	$(INSTALL) $(INSTALLSCRIPTOPT) ccarun $(installroot)$(bindir)/ccarun
 	$(INSTALL) $(INSTALLDIROPT) $(installroot)$(scdatadir)
 	$(INSTALL) $(INSTALLSCRIPTOPT) $(SRCDIR)/mpqcrunproc $(installroot)$(scdatadir)/mpqcrunproc
-
+	$(INSTALL) $(INSTALLSCRIPTOPT) $(SRCDIR)/ccarunproc $(installroot)$(scdatadir)/ccarunproc
 
 install::
 	/bin/rm -f $(installroot)$(bindir)/chkmpqcout
