added driver components
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407498

--- a/mpqc/src/lib/chemistry/cca/Makefile
+++ b/mpqc/src/lib/chemistry/cca/Makefile
@@ -50,7 +50,8 @@ BABEL_CLASSES = \
   MPQC.IntegralEvaluator4 \
   MPQC.ChemistryOpt_CoordinateModel \
   MPQC.ComponentClassDescription \
-  MPQC.ComponentFactory
+  MPQC.ComponentFactory \
+  MPQC.SimpleDriver
 
 EXTRA_CXX_SRCS = socket.cc except.cc basis_cca_to_sc.cc
 EXTRA_INCLUDES = socket.h except.h ccaiter.h
