oops, didn't mean to edit this file
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407509

--- a/mpqc/src/bin/mpqc/mpqcrun.in
+++ b/mpqc/src/bin/mpqc/mpqcrun.in
@@ -50,7 +50,7 @@ if ("$always_use_mpi" eq "yes") {
 $integral = "none";
 
 # The mpi launch command
-$launch = '@CCALAUNCH@';
+$launch = '@LAUNCH@';
 
 # The number of tasks
 $ntask = 1;
