If running multiple processes on a single node, duplicate the nodes in the host file.  This is needed for the MVAPICH 0.9.5 provided by topspin, for example.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407535

--- a/mpqc/src/bin/mpqc/mpqcrun.in
+++ b/mpqc/src/bin/mpqc/mpqcrun.in
@@ -325,8 +325,10 @@ foreach my $i (0..$maxjobs-1) {
     }
     $nodefile{$i} = ".tmp.nodefile.$$.$i";
     open(NODEFILE,">" . $nodefile{$i});
-    foreach my $j (@slice) {
-        printf NODEFILE "%s\n", $j;
+    foreach my $proc (1..$nprocpernode) {
+      foreach my $j (@slice) {
+          printf NODEFILE "%s\n", $j;
+      }
     }
     close(NODEFILE);
 }
