--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -50,7 +50,8 @@ CXXSRCS = mbptr12.cc \
   coulomb.cc exchange.cc fock.cc ebc_contribs.cc gbc_contribs.cc \
   compute_a_gebc_vbs.cc compute_vxb_a_symm.cc compute_vxb_a_asymm.cc \
   dualbasis_mp2.cc r12_amps.cc compute_amps.cc \
-  twobodygrid.cc svd.cc linearr12.cc intermeds_g12.cc
+  twobodygrid.cc svd.cc linearr12.cc intermeds_g12.cc \
+  singlerefinfo.cc
 
 ifeq ($(HAVE_MPIIO),yes)
   CXXSRCS += r12ia_mpiiofile.cc
