Added code to compute UMP2 energies. Doesn't work yet.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407564

--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -53,7 +53,7 @@ CXXSRCS = mbptr12.cc \
   twobodygrid.cc svd.cc linearr12.cc intermeds_g12.cc \
   singlerefinfo.cc utils.cc compute_vxb_a_new.cc \
   twoparticlecontraction.cc spin.cc \
-  mp2r12_energy_compute.cc
+  mp2r12_energy_compute.cc mp2_pair_energies.cc
 
 ifeq ($(HAVE_MPIIO),yes)
   CXXSRCS += r12ia_mpiiofile.cc
