--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1,5 +1,5 @@
 define([sc_mmm_version],[2.3.0])
-define([sc_buildid],[alpha])
+define([sc_buildid],[beta])
 define([sc_so_version],[7:0:0])
 
 dnl Process this file with autoconf to produce a configure script.
